# zephyr

./: .gitmodules  .shippable.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.rst  Kconfig.zephyr  manifest.cmake
arch/: Kconfig
arch/arm/core/: CMakeLists.txt
arch/arm/core/offsets/: CMakeLists.txt
arch/common/: CMakeLists.txt  gen_isr_tables.py
arch/posix/: CMakeLists.txt
arch/posix/core/: CMakeLists.txt  posix_core.c
arch/x86/core/: CMakeLists.txt  cache.c  crt0.S  x86_mmu.c
arch/xtensa/: Kconfig
boards/arm/frdm_k64f/: Kconfig.board  frdm_k64f.dts
boards/arm/lpcxpresso54114/: board.cmake
boards/arm/mps2_an521/: board.cmake
boards/arm/nrf51_pca10028/: board.cmake
boards/arm/nrf52840_pca10056/: nrf52840_pca10056.dts
boards/arm/nrf52_pca10040/: board.cmake
boards/arm/qemu_cortex_r5/: board.cmake
boards/common/: jlink.board.cmake  nrfjprog.board.cmake
boards/posix/native_posix/: CMakeLists.txt
boards/posix/simple_process/: hw_models_top.h  irq_handler.h  timer_model.c  timer_model.h
boards/riscv/qemu_riscv64/: board.cmake
boards/shields/wnc_m14a2a/: wnc_m14a2a.overlay  wnc_m14a2a_X_frdm_k64f.overlay  wnc_m14a2a_X_nrf52840_pca10056.overlay
boards/x86/qemu_x86/: Kconfig.board  board.cmake
boards/x86/up_squared/: dts.cmake  dts_fixup.h  dts_fixup_with_sbl.h  dts_fixup_without_sbl.h
boards/x86/x86_jailhouse/: board.cmake
cmake/: dts.cmake  extensions.cmake  generic_toolchain.cmake  host-tools.cmake  kconfig.cmake  target_toolchain.cmake  toolchain-gcc.cmake  toolchain-host-gcc.cmake  toolchain-xcc.cmake  toolchain.cmake  version.cmake
cmake/Modules/: CachingExternalProject.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
cmake/app/: boilerplate.cmake
cmake/compiler/: gcc.cmake
cmake/emu/: qemu.cmake
cmake/flash/: CMakeLists.txt
cmake/linker/ld/: target.cmake
cmake/qemu/: CMakeLists.txt
cmake/toolchain/: xcc.cmake
cmake/toolchain/cross-compile/: Kconfig
cmake/toolchain/espressif/: Kconfig
cmake/toolchain/gnuarmemb/: Kconfig
cmake/toolchain/llvm/: Kconfig
cmake/toolchain/xcc/: Kconfig
cmake/toolchain/xtools/: Kconfig
cmake/toolchain/zephyr/: Kconfig  generic.cmake
cmake/usage/: usage.cmake
doc/: CMakeLists.txt
doc/scripts/genrest/: genrest.py
doc/subsystems/: subsystems.rst
doc/subsystems/codegen/: codegen.rst
drivers/: CMakeLists.txt
drivers/adc/: CMakeLists.txt
drivers/aio/: CMakeLists.txt
drivers/audio/: CMakeLists.txt
drivers/bluetooth/: CMakeLists.txt
drivers/bluetooth/hci/: CMakeLists.txt
drivers/clock_control/: CMakeLists.txt
drivers/console/: CMakeLists.txt
drivers/counter/: CMakeLists.txt
drivers/crypto/: CMakeLists.txt
drivers/dma/: CMakeLists.txt  dma_cavs.c  dma_cavs.h
drivers/entropy/: CMakeLists.txt
drivers/flash/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt
drivers/i2c/: CMakeLists.txt
drivers/i2s/: CMakeLists.txt
drivers/ieee802154/: Kconfig  Kconfig.nrf5  ieee802154_nrf5.c
drivers/interrupt_controller/: CMakeLists.txt
drivers/ipm/: CMakeLists.txt
drivers/modem/: Kconfig.wncm14a2a  wncm14a2a.c
drivers/pwm/: CMakeLists.txt
drivers/random/: CMakeLists.txt  Kconfig  Kconfig.nrf5  Makefile  random_nrf5.c
drivers/rtc/: CMakeLists.txt
drivers/sensor/adt7420/: CMakeLists.txt
drivers/sensor/adxl362/: CMakeLists.txt
drivers/sensor/adxl372/: CMakeLists.txt
drivers/sensor/ak8975/: CMakeLists.txt
drivers/sensor/amg88xx/: CMakeLists.txt
drivers/sensor/apds9960/: CMakeLists.txt
drivers/sensor/bma280/: CMakeLists.txt
drivers/sensor/bmc150_magn/: CMakeLists.txt
drivers/sensor/bme280/: CMakeLists.txt
drivers/sensor/bmg160/: CMakeLists.txt
drivers/sensor/bmi160/: CMakeLists.txt
drivers/sensor/bmm150/: CMakeLists.txt
drivers/sensor/ccs811/: CMakeLists.txt
drivers/sensor/dht/: CMakeLists.txt
drivers/sensor/fxas21002/: CMakeLists.txt
drivers/sensor/fxos8700/: CMakeLists.txt
drivers/sensor/hdc1008/: CMakeLists.txt
drivers/sensor/hmc5883l/: CMakeLists.txt
drivers/sensor/hp206c/: CMakeLists.txt
drivers/sensor/hts221/: CMakeLists.txt
drivers/sensor/isl29035/: CMakeLists.txt
drivers/sensor/lis2dh/: CMakeLists.txt
drivers/sensor/lis3dh/: CMakeLists.txt
drivers/sensor/lis3mdl/: CMakeLists.txt
drivers/sensor/lps22hb/: CMakeLists.txt
drivers/sensor/lps25hb/: CMakeLists.txt
drivers/sensor/lsm6ds0/: CMakeLists.txt
drivers/sensor/lsm6dsl/: CMakeLists.txt
drivers/serial/: CMakeLists.txt  uart_nrfx_uart.c
drivers/spi/: CMakeLists.txt  spi_ll_stm32.c
drivers/timer/: CMakeLists.txt  posix_sp_timer.c
drivers/usb/device/: usb_dc_dw.c
dts/: CMakeLists.txt  dts.cmake
ext/: Kconfig
ext/hal/: CMakeLists.txt
ext/hal/nordic/: CMakeLists.txt
ext/hal/nordic/nrfx/mdk/: nrf52.h  nrf52_peripheral_address_map.h
ext/hal/st/stm32cube/: CMakeLists.txt
ext/hal/st/stm32cube/stm32f4xx/: CMakeLists.txt
ext/lib/: CMakeLists.txt  Makefile
include/: generated_dts_board.h  kernel_includes.h  partition_manager_overrides.h  pthread.h
include/linker/: common-rom.ld  linker-defs.h
include/misc/: dlist.h  util.h
include/net/: net_l2.h  net_pkt.h  openthread.h
include/toolchain/: xcc.h
kernel/: CMakeLists.txt  Kconfig  init.c
misc/: CMakeLists.txt
samples/application_development/app_libraries/: CMakeLists.txt
samples/application_development/app_libraries/src/: app_lib.c  app_lib.h  main.c
samples/hello_world/: CMakeLists.txt  prj.conf
scripts/: CMakeLists.txt  compiler_driver.py  extract_dts_includes.py  gen_gcov_files.py  gen_kobject_list.py  qemu_wrapper.py  sanitycheck
scripts/codegen/: cmake.py  codegen.py  config.py  devicetree.py  guard.py  include.py  log.py  options.py
scripts/dts/: extract_dts_includes.py
scripts/kconfig/: kconfig.py  kconfiglib.py  menu.py
scripts/west_commands/: run_common.py  zephyr_ext_common.py
subsys/: CMakeLists.txt
subsys/bluetooth/: CMakeLists.txt  Kconfig
subsys/logging/: Kconfig
subsys/net/: CMakeLists.txt
tests/: Dockerfile  Kconfig
tests/cmsis_rtos_v1/: prj_cov.conf  testcase.yaml
tests/coverage/: coverage.h
tests/unit/: unittest.cmake
(+149 files in other folders)
